angular 15 -> 16 (material needs to be fixed)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,44 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.10",
-    "@angular/cdk": "16.2.9",
-    "@angular/common": "16.2.10",
-    "@angular/compiler": "16.2.10",
-    "@angular/core": "16.2.10",
-    "@angular/forms": "16.2.10",
-    "@angular/material": "16.2.9",
-    "@angular/platform-browser": "16.2.10",
-    "@angular/platform-browser-dynamic": "16.2.10",
-    "@angular/router": "16.2.10",
-    "@angular/service-worker": "16.2.10",
-    "firebaseui": "^4.8.0",
+    "@angular/animations": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.3",
+    "@angular/cdk": "^16.2.0",
+    "@angular/material": "^16.2.0",
+    "firebaseui": "^6.1.0",
     "html5-qrcode": "^2.0.3",
-    "ngx-facebook": "*",
-    "qrcode": "~1.4.4",
-    "rxjs": "~6.6.6",
-    "tslib": "~2.0.0",
-    "zone.js": "~0.13.3"
+    "@angular/service-worker": "^16.2.0",
+    "qrcode": "~1.4.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.7",
-    "@angular/cli": "16.2.7",
-    "@angular/compiler-cli": "16.2.10",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
     "@types/dom-mediacapture-record": "~1.0.18",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "~2.0.12",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.6.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
+    "typescript": "~5.1.3"
   }
 }
