--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "com.raxim.myscoutee.Main",
+            "projectName": "profile"
+        },
+        {
+            "type": "java",
             "name": "Attach to Remote Program",
             "request": "attach",
             "hostName": "localhost",
