--- a/server/docker/conf/mosquitto/mosquitto.conf
+++ b/server/docker/conf/mosquitto/mosquitto.conf
@@ -7,9 +7,9 @@
 #plugin /mosquitto/plugins/mosquitto_external_auth/mosquitto_external_auth.so
 plugin /usr/lib/mosquitto_external_auth.so
 
-plugin_opt_url_auth http://localhost:80/mqtt/auth
-plugin_opt_url_acl http://localhost:80/mqtt/acl
-plugin_opt_url_disconnect http://localhost:80/mqtt/disconnect
+plugin_opt_url_auth http://profilemanagement:8080/mqtt/auth
+plugin_opt_url_acl http://profilemanagement:8080/mqtt/acl
+plugin_opt_url_disconnect http://profilemanagement:8080/mqtt/disconnect
 plugin_opt_header_auth X-Authorization-Firebase
 
 listener 1883
