nginx proxy for mqtt

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - 443:443
       - 27017-27019:27017-27019
       - 5005:5005
-      #- 1883:1883
+      - 1883:1883
     volumes:
       - ./docker/conf/nginx/conf/http:/etc/nginx/conf.d/
       - ./docker/conf/nginx/conf/stream:/etc/nginx/stream_conf.d/
@@ -42,6 +42,8 @@ services:
       - myscoutee
     depends_on:
       - mongodb
+      - mqtt
+      - profilemanagement
       #- certbot
     #command: ["/scripts/wait-for-it.sh", "-t", "0", "profilemanagement:8080", "--", "nginx", "-g", "daemon off;"]
   mongodb:
@@ -67,8 +69,6 @@ services:
   mqtt:
     image: ${MOSQUITTO_IMAGE_EXT_AUTH}
     container_name: mqtt
-    ports:
-      - "1883:1883" #default mqtt port
     volumes:
       - ./docker/conf/mosquitto:/mosquitto/config
       - ./data/mosquitto/data:/mosquitto/data:rw
