--- a/backup/mosquitto-debug/.vscode/settings.json
+++ b/backup/mosquitto-debug/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-    "files.associations": {
-        "config.h": "c",
-        "mosquitto_internal.h": "c",
-        "time_mosq.h": "c"
-    }
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
