--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
             "name": "Attach to Remote Program",
             "request": "attach",
             "hostName": "localhost",
-            "port": "5005"
+            "port": "5005",
+            "projectName": "profile"
         }
     ]
 }
