handle message with save

--- a/server/projects/profile/build.gradle
+++ b/server/projects/profile/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.integration:spring-integration-test'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.7.0'
 }
 
