--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -46,6 +46,10 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
+                },
+                {
+                  "replace": "src/app/services/mock-api.service.ts",
+                  "with": "src/app/services/mock-api.service.prod.ts"
                 }
               ],
               "optimization": true,
